<resources>
    <string name="app_name" translatable="false">MiuiHomeR</string>
    <string name="xposed_desc">Make MiuiHome Great Again.</string>
    <string name="backup_and_restore">Backup and Restore</string>
    <string name="backup">Backup Module Settings</string>
    <string name="restore">Restore Module Settings</string>
    <string name="reboot_home">Reboot Launcher</string>
    <string name="about">About</string>
    <string name="complete_blur">CompleteBlur</string>
    <string name="test_blur">Test Blur</string>
    <string name="simple_blur">Simple Blur</string>
    <string name="none_blur">None Blur</string>
    <string name="none_blur_simple_anim">None Blur&amp;Simple Anim</string>
    <string name="blur_level">Blur Level</string>
    <string name="cancel_wallpaper_dimming">Cancel Wallpaper Dimming</string>
    <string name="hide_status_bar_in_task_view">Hide Status Bar When In Task View</string>
    <string name="app_name_distance_task_view_card">App name distance task view card</string>
    <string name="task_view_card_rounded_corners">Task view card rounded corners</string>
    <string name="anim_speed">Animation speed of switch applications</string>
    <string name="recent">Recent View</string>
    <string name="widget">Widget</string>
    <string name="hide_widget_title">Hide widget title</string>
    <string name="allow_moved_to_minus_one_screen">Allow classic widget to be moved to the Minus One screen</string>
    <string name="Show_MIUI_widget">Show MIUI widgets on the Classic widgets page</string>
    <string name="small_folder_blur">Small folder blur</string>
    <string name="small_folder_blur_corner_radius">Small folder blur corner radius</string>
    <string name="small_folder_blur_background_size">Small folder blur view background size</string>
    <string name="blurred_background_when_opening_folder_view">Blurred background when opening folder view</string>
    <string name="using_full_width_of_folder_view">Using the full width of the folder view</string>
    <string name="number_of_icons_in_folder_iew">Number of rows of icons in the folder view</string>
    <string name="vertical_padding_in_folder_view">vertical padding in the folder view</string>
    <string name="dock_settings">Dock</string>
    <string name="enable_dock_hook">Enable dock hook</string>
    <string name="enable_dock">Enable dock blur</string>
    <string name="bottom_margin_of_dock_icon">Bottom margin of dock icon</string>
    <string name="bottom_margin_of_home_icon">Bottom margin of page indicator</string>
    <string name="height_of_dock_view">Height of dock view</string>
    <string name="margins_on_both_sides_of_dock_view">Margins on both sides of the dock view</string>
    <string name="top_margin_of_dock_icon">Top margin of the dock icon</string>
    <string name="bottom_margin_of_dock_view">Bottom margin of the dock view</string>
    <string name="corner_radius_of_dock_view">Corner radius of the dock view</string>
    <string name="other_features">Other</string>
    <string name="always_show_status_bar_clock">Always show status bar clock</string>
    <string name="double_tap_to_lock_screen">Double tap to lock the screen</string>
    <string name="shortcut_menu_background_view_blur">Shortcut background view blur</string>
    <string name="unlock_launcher_icon_grids">Unlock launcher icon grids</string>
    <string name="Always_blur_launcher_wallpaper">Always blur launcher wallpaper</string>
    <string name="blur_radius">Blur Radius</string>
    <string name="unlock_hotseat">Remove icon number restriction from dock</string>
    <string name="vertical_task_view_card_size">Thumbnail size for Vertically</string>
    <string name="horizontal_task_view_card_size1">Thumbnail size for Horizontally-Vertical</string>
    <string name="horizontal_task_view_card_size2">Thumbnail size for Horizontally-Horizontal</string>
    <string name="icon_title_font_size">Icon Labels Font Size</string>
    <string name="home">Home</string>
    <string name="folder">Folder</string>
    <string name="dock_icon_title">Show App name in the Dock</string>
    <string name="blur_radius_summary">MiuiHome scope only</string>
    <string name="home_folder_columns">%d Columns</string>
    <string name="infinite_scroll">Enable launcher infinite scroll</string>
    <string name="infinite_scroll_summary">Continuing right swipe from the last page will take you back to the first page</string>
    <string name="hide_seek_point">Remove Page Indicator</string>
    <string name="app_drawer">App Drawer</string>
    <string name="hide_category_all">Hide \"All\" in App Drawer</string>
    <string name="hide_category_paging_edit">Hide \"Edit\" Button in App Drawer\'s Paging</string>
    <string name="hide_clean_up">Hide the Clean All Button</string>
    <string name="hide_small_window">Remove the \"Floating windows\" button</string>
    <string name="github">Github Repository</string>
    <string name="close_folder">Auto close folder</string>
    <string name="close_folder_summary">Close folder when launch app from folder</string>
    <string name="folder_anim">Anim mods</string>
    <string name="folder_anim_1">Open speed 1</string>
    <string name="folder_anim_2">Open speed 2</string>
    <string name="folder_anim_3">Close speed 1</string>
    <string name="folder_anim_4">Close speed 2</string>
    <string name="optimize_unlock_anim">Optimize unlock anim</string>
    <string name="shortcut_small_window">Add small window in Shortcut</string>
    <string name="shortcut_remove_restrictions">Remove restrictions on shortcuts</string>
    <string name="small_window">Small window</string>
    <string name="icon_title_font_color">Icon Labels Font Color</string>
    <string name="recents_card_bg_color">Customize the thumbnail background color for small window apps</string>
    <string name="recents_text_size">Size of thumbnail labels text</string>
    <string name="recents_text_color">Color of thumbnail labels text</string>
    <string name="small_folder_blur_drag_offset">Small folder drag view blur top offset</string>
    <string name="icon_title_font_scrolling">Scroll to show App titles</string>
    <string name="overlap_mode">Fold2 style App Vault</string>
    <string name="overlap_mode_summary">Works better with WINI</string>
    <string name="module_settings">Module Settings</string>
    <string name="tg_chat">Telegram Chat</string>
    <string name="tg_channel">Telegram Channel</string>
    <string name="qq_group">QQ Group</string>
    <string name="qq_channel">QQ Channel</string>
    <string name="discussion">Discussion</string>
    <string name="repo_summary">Welcome more developers to participate in the development</string>
    <string name="translate">Help us translate the app to your language</string>
    <string name="translator">Translator</string>
    <string name="developer">Developer</string>
    <string name="translation">Crowdin</string>
    <string name="translators">YuKongA</string>
    <string name="language">English</string>
    <string name="settings_language">Language</string>
    <string name="anim_speed_recent">Animation speed in and out of recent tasks</string>
    <string name="home_fold_dock">Dock for folded devices</string>
    <string name="home_all_apps_blur">Enable All Apps Container View Blur</string>
    <string name="home_all_apps_blur_summary">Please set app drawer background transparency to 100% to use this feature</string>
    <string name="settings">Settings</string>
    <string name="system_default">Default</string>
    <string name="launcher_icon">Launcher Icon</string>
    <string name="recents_card_remove_anim">Modify the anim for removing cards</string>
    <string name="recents_icon">Hide App Icon</string>
    <string name="recent_text">Text displayed when no recent task</string>
    <string name="recent_text_summary">Also you can type a space to remove the text</string>
    <string name="big_icon_corner">Medium icon round corner follow</string>
    <string name="big_folder_blur">Big folder blur</string>
    <string name="big_folder_blur_corner_radius">Big folder blur corner radius</string>
    <string name="big_folder_blur_background_width">Big folder blur view background width</string>
    <string name="big_folder_blur_background_height">Big folder blur view background height</string>
    <string name="big_folder_blur_drag_offset">Big folder drag view blur top offset</string>
    <string name="fold_dock_num">%d Num</string>
    <string name="fold_dock_hotseat">Number of fixed Apps</string>
    <string name="fold_dock_run">Number of running Apps</string>
    <string name="haptic_feedback">Haptic feedback for side-slide return</string>
    <string name="haptic_feedback_summary">The Official use is 162/163 respectively. Preset 2 is the vibration feedback during typing, you can try other haptic feedback yourself</string>
    <string name="haptic_Back_ReadyBack">1. Ready Back</string>
    <string name="haptic_Back_HandUp">2. Hand Up</string>
    <string name="blur_view_color">Blur view background color</string>
    <string name="mtk_warning">MediaTek devices use this feature may cause gesture animation lag</string>
    <string name="complete_blur_fix">Complementary complete blur</string>
    <string name="complete_blur_fix_summary">Enable this feature may cause in-app gesture up moment not blurred and other blur issues</string>
</resources>