<?xml version="1.0" encoding="utf-8"?>
<moralnorm.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <moralnorm.preference.PreferenceCategory>

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_home_unlock_anim"
            android:title="@string/optimize_unlock_anim" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_home_overlap_mode"
            android:summary="@string/overlap_mode_summary"
            android:title="@string/overlap_mode" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_home_show_status_clock"
            android:title="@string/always_show_status_bar_clock" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_haptic_feedback"
            android:summary="@string/haptic_feedback_summary"
            android:title="@string/haptic_feedback" />

        <SeekBarPreference
            android:defaultValue="2"
            android:dependency="prefs_key_haptic_feedback"
            android:key="prefs_key_haptic_Back_ReadyBack"
            android:title="@string/haptic_Back_ReadyBack"
            app:maxValue="200"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:defaultValue="2"
            android:dependency="prefs_key_haptic_feedback"
            android:key="prefs_key_haptic_Back_HandUp"
            android:title="@string/haptic_Back_HandUp"
            app:maxValue="200"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:defaultValue="100"
            android:key="prefs_key_home_blur_radius"
            android:summary="@string/blur_radius_summary"
            android:title="@string/blur_radius"
            app:format="%d / 100 f"
            app:maxValue="500"
            app:showSeekBarValue="true" />
    </moralnorm.preference.PreferenceCategory>
</moralnorm.preference.PreferenceScreen>