<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory>

        <DropDownPreference
            android:defaultValue="2"
            android:key="prefs_key_recent_blur"
            android:title="@string/blur_level"
            app:entries="@array/recent_blur"
            app:entryValues="@array/recent_blur_value" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_home_disable_darken"
            android:title="@string/cancel_wallpaper_dimming" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_recents_card_remove_anim"
            android:title="@string/recents_card_remove_anim" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_recents_icon"
            android:title="@string/recents_icon" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_home_hide_clean_up"
            android:title="@string/hide_clean_up" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_home_hide_status"
            android:title="@string/hide_status_bar_in_task_view" />

        <EditTextPreference
            android:key="prefs_key_recent_text"
            android:summary="@string/recent_text_summary"
            android:title="@string/recent_text" />

        <SeekBarPreference
            android:defaultValue="20"
            android:key="prefs_key_task_view_corners"
            android:title="@string/task_view_card_rounded_corners"
            app:format="%d dp"
            app:maxValue="100"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:defaultValue="40"
            android:key="prefs_key_task_view_header_height"
            android:title="@string/app_name_distance_task_view_card"
            app:format="%d dp"
            app:maxValue="150"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:defaultValue="130"
            android:key="prefs_key_home_anim_ratio_recent"
            android:title="@string/anim_speed_recent"
            app:format="%d / 100 f"
            app:maxValue="500"
            app:minValue="10"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:defaultValue="100"
            android:key="prefs_key_task_view_vertical"
            android:title="@string/vertical_task_view_card_size"
            app:format="%d / 100 f"
            app:maxValue="150"
            app:minValue="50"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:defaultValue="100"
            android:key="prefs_key_task_view_horizontal1"
            android:title="@string/horizontal_task_view_card_size1"
            app:format="%d / 100 f"
            app:maxValue="150"
            app:minValue="50"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:defaultValue="100"
            android:key="prefs_key_task_view_horizontal2"
            android:title="@string/horizontal_task_view_card_size2"
            app:format="%d / 100 f"
            app:maxValue="150"
            app:minValue="50"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:defaultValue="14"
            android:key="prefs_key_recents_text_size"
            android:title="@string/recents_text_size"
            app:format="%d f"
            app:maxValue="30"
            app:showSeekBarValue="true" />

        <moralnorm.preference.ColorPickerPreference
            android:defaultValue="-1"
            android:key="prefs_key_recents_text_color"
            android:title="@string/recents_text_color"
            app:showAlphaSlider="true"
            app:showColorShades="true" />

        <moralnorm.preference.ColorPickerPreference
            android:defaultValue="-1"
            android:key="prefs_key_recents_card_bg_color"
            android:title="@string/recents_card_bg_color"
            app:showAlphaSlider="true"
            app:showColorShades="true" />


    </PreferenceCategory>

</PreferenceScreen>