<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory>

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_home_infinite_scroll"
            android:title="@string/infinite_scroll"
            android:summary="@string/infinite_scroll_summary"/>

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_home_hide_seek_point"
            android:title="@string/hide_seek_point" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_home_blur_wallpaper"
            android:title="@string/Always_blur_launcher_wallpaper" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_home_double_sleep"
            android:title="@string/double_tap_to_lock_screen" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_home_shortcut_blur"
            android:title="@string/shortcut_menu_background_view_blur" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_home_unlock_grids"
            android:title="@string/unlock_launcher_icon_grids" />

        <SeekBarPreference
            android:defaultValue="12"
            android:key="prefs_key_icon_title_font_size"
            android:title="@string/icon_title_font_size"
            app:format="%d f"
            app:maxValue="30"
            app:showSeekBarValue="true" />

    </PreferenceCategory>
</PreferenceScreen>