<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory>

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_small_folder_blur"
            android:title="@string/small_folder_blur" />

        <SeekBarPreference
            android:defaultValue="60"
            android:dependency="prefs_key_small_folder_blur"
            android:key="prefs_key_small_folder_corner"
            android:title="@string/small_folder_blur_corner_radius"
            app:format="%d dp"
            app:maxValue="100"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:defaultValue="250"
            android:dependency="prefs_key_small_folder_blur"
            android:key="prefs_key_small_folder_side"
            android:title="@string/small_folder_blur_background_size"
            app:format="%d dp"
            app:maxValue="500"
            app:showSeekBarValue="true" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="prefs_key_home_folder_blur"
            android:title="@string/blurred_background_when_opening_folder_view" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_home_folder_width"
            android:title="@string/using_full_width_of_folder_view" />

        <SeekBarPreference
            android:defaultValue="3"
            android:key="prefs_key_home_folder_columns"
            android:title="@string/number_of_icons_in_folder_iew"
            app:format="@string/home_folder_columns"
            app:maxValue="6"
            app:minValue="1"
            app:showSeekBarValue="true" />

    </PreferenceCategory>
</PreferenceScreen>