<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory>

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_home_blur_wallpaper"
            android:title="@string/Always_blur_launcher_wallpaper" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_home_show_status_clock"
            android:title="@string/always_show_status_bar_clock" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_home_double_sleep"
            android:title="@string/double_tap_to_lock_screen" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_home_shortcut_blur"
            android:title="@string/shortcut_menu_background_view_blur" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_home_unlock_grids"
            android:title="@string/unlock_launcher_icon_grids" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_pad_dock_blur"
            android:title="@string/Pad_android_12_dock_blur" />

        <SeekBarPreference
            android:defaultValue="100"
            android:key="prefs_key_home_blur_radius"
            android:title="@string/blur_radius"
            app:format="%d / 100 f"
            app:maxValue="500"
            app:showSeekBarValue="true" />

    </PreferenceCategory>
</PreferenceScreen>