<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory>

        <Preference android:title="@string/home">
            <intent
                android:targetClass="com.yuk.miuiHomeR.ui.HomeHomeSettings"
                android:targetPackage="com.yuk.miuiHomeR" />
        </Preference>

        <Preference android:title="@string/recent">
            <intent
                android:targetClass="com.yuk.miuiHomeR.ui.RecentActivity"
                android:targetPackage="com.yuk.miuiHomeR" />
        </Preference>

        <Preference android:title="@string/widget">
            <intent
                android:targetClass="com.yuk.miuiHomeR.ui.WidgetActivity"
                android:targetPackage="com.yuk.miuiHomeR" />
        </Preference>

        <Preference android:title="文件夹">
            <intent
                android:targetClass="com.yuk.miuiHomeR.ui.FolderActivity"
                android:targetPackage="com.yuk.miuiHomeR" />
        </Preference>

        <Preference
            android:key="prefs_key_home_dock_settings"
            android:title="@string/dock_settings">
            <intent
                android:targetClass="com.yuk.miuiHomeR.ui.DockActivity"
                android:targetPackage="com.yuk.miuiHomeR" />
        </Preference>

        <Preference android:title="@string/other_features">
            <intent
                android:targetClass="com.yuk.miuiHomeR.ui.OtherFeaturesActivity"
                android:targetPackage="com.yuk.miuiHomeR" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>