<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory>

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_home_dock_blur"
            android:title="@string/enable_dock" />

        <SeekBarPreference
            android:defaultValue="-8"
            android:dependency="prefs_key_home_dock_blur"
            android:key="prefs_key_home_dock_icon_bottom_margin"
            android:title="@string/bottom_margin_of_icon"
            app:format="%d dp"
            app:maxValue="100"
            app:minValue="-20"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:defaultValue="98"
            android:dependency="prefs_key_home_dock_blur"
            android:key="prefs_key_home_dock_height"
            android:title="@string/height_of_dock_view"
            app:format="%d dp"
            app:maxValue="200"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:defaultValue="10"
            android:dependency="prefs_key_home_dock_blur"
            android:key="prefs_key_home_dock_margin"
            android:title="@string/margins_on_both_sides_of_dock_view"
            app:format="%d dp"
            app:maxValue="100"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:defaultValue="30"
            android:dependency="prefs_key_home_dock_blur"
            android:key="prefs_key_home_dock_top_margin"
            android:title="@string/top_margin_of_dock_view"
            app:format="%d dp"
            app:maxValue="100"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:defaultValue="13"
            android:dependency="prefs_key_home_dock_blur"
            android:key="prefs_key_home_dock_bottom_margin"
            android:title="@string/bottom_margin_of_dock_view"
            app:format="%d dp"
            app:maxValue="100"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:defaultValue="25"
            android:dependency="prefs_key_home_dock_blur"
            android:key="prefs_key_home_dock_corner"
            android:title="@string/corner_radius_of_dock_view"
            app:format="%d dp"
            app:maxValue="50"
            app:showSeekBarValue="true" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_home_dock_icon_title"
            android:title="@string/dock_icon_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_home_unlock_hotseat"
            android:title="@string/unlock_hotseat" />

    </PreferenceCategory>

</PreferenceScreen>